--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
 .App {
   text-align: center;
+  background-color: #463d2b;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App input{
+  background-color: #7f6c6e;
+  width: 60%;
+  height: 35px;
+  border-radius: 10px;
+  font-size: 20px;
+  color: #bed3e1;
+  margin-top: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.selector-meme{
+  text-align: center;
+  width: 250px;
+  height: 35px;
+  border-radius: 10px;
+  border: 3px solid #463d2b;
+  background-color: #bed3e1;
+  font-size: 20px;
+  color: #463d2b;
+  margin-top: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.meme{
+  color: #fff;
 }
 
+#line1,#line2{
+  position: absolute;
+  width: 100%;
+  left: 0;
+  font-size: 40px;
+  text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+}
+
+#line2{
+  margin-top:420px;
+}
+
+#line1{
+  margin-top:40px;
+}
+
+.btn{
+  text-align: center;
+  width: 250px;
+  height: 35px;
+  border-radius: 10px;
+  font-size: 20px;
+  color: #bed3e1;
+  margin-top: 10px;
+  background-color: #7f6c6e;
+  border: 3px solid #bed3e1;
+}
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ /* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
 }
+
+ /* Medium devices (tablets, 768px and up) */
+@media (max-width: 768px) {
+  .App input{
+    width: 90%;
+    height: 20px;
+    padding: 5px;
+    border-radius: 10px;
+    font-size: 20px;
+  }
+
+  img{
+    width: 100%;
+    border-radius: 5px;
+  }
+
+  #line1,#line2{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    font-size: 25px;
+    text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+  }
+  
+  #line2{
+    margin-top:270px;
+  }
+  
+  #line1{
+    margin-top:40px;
+  }
+
+
+}
+
+ /* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+
+}
+
+ /* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { }
